--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">My Django App</a>
+      <a class="navbar-brand" href="#">AsdBand Page</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
@@ -23,7 +23,13 @@
             <a class="nav-link" href="/shop">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/concerts">Concerts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/news">News</a>
           </li>
         </ul>
       </div>
