--- a/myapp/templates/shop.html
+++ b/myapp/templates/shop.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-
+{% block title %} Shop {% endblock %}
 {% block content %}
 <h1>Shop</h1>
 <div>
     {% for item in items %}
     <div>
+        <img src=[item.cover_photo_url] alt="">
         {{item.title}}: {% if item.available %} Available {% else %}Not available {% endif %} Price: ${{item.price}}
 
     </div>
