image paths work, dark-light theme switch works

--- a/myapp/templates/concerts.html
+++ b/myapp/templates/concerts.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %} {% block title %} Concerts {% endblock %}
+{% load static %}
 {% block content %}
 <p> this is the Concerts page </p>
 <div>
     {% for concert in concerts %}
     <div>
-        <img src="[concert.cover_photo_url]" alt="concert cover photo">
+        <img  src="{% static concert.cover_photo_url %}" alt="concert cover photo">
         <h2>
             {{concert.title}}
         </h2>
