--- a/myapp/templates/shop.html
+++ b/myapp/templates/shop.html
@@ -5,7 +5,7 @@
 <div>
     {% for item in items %}
     <div>
-        <img src=[item.cover_photo_url] alt="">
+        <img src={{item.cover_photo_url}} alt="Photo of the item">
         {{item.title}}: {% if item.available %} Available {% else %}Not available {% endif %} Price: ${{item.price}}
 
     </div>
