--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -59,7 +59,8 @@
 
   <div class="container">{% block content %} {% endblock %}</div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const themeToggle = document.getElementById('theme-toggle');
@@ -77,6 +78,12 @@
         localStorage.setItem('theme', newTheme);
       });
     });
+
+    const toastElList = [].slice.call(document.querySelectorAll('.toast'));
+    toastElList.map(function (toastEl) {
+        new bootstrap.Toast(toastEl, { delay: 4000 }).show();
+    });
+
   </script>
 
 </body>
