--- a/myapp/templates/unsubscribe_confirm.html
+++ b/myapp/templates/unsubscribe_confirm.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container mt-5 border rounded shadow-sm">
+
   <h2>Unsubscribe from Newsletter</h2>
   <p>Hello {{ subscriber.first_name }}, are you sure you want to unsubscribe from our emails?</p>
 
@@ -8,4 +10,8 @@
     <button class="btn btn-danger" type="submit">Yes, unsubscribe me</button>
     <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
   </form>
+
+
+</div>
+ 
 {% endblock %}
