--- a/myapp/templates/news.html
+++ b/myapp/templates/news.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block title %} Newsletter {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-  <h2 class="mb-4">Subscribe to Our Newsletter</h2>
+<div class="container mt-5 mb-5 border rounded shadow-lg p-4" style="max-width: 520px;">
+  <h2 class="mb-4 display-6">Subscribe to Our Newsletter</h2>
   <form method="post" novalidate>
     {% csrf_token %}
     <div class="mb-3">
