--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -30,7 +30,13 @@
         object-fit: cover;
         display: block;
     }
-
+    @media (max-width: 991.5px) {
+        #mainHero {
+            top: 60px;
+            right: 30px;
+            opacity: 0.4;
+        }
+    }
     /* Remove vertical margin between image rows on larger screens */
     @media (min-width: 768px) {
         .row.no-gap {
@@ -57,6 +63,18 @@
     @media (max-width: 768px) {
         .member-img {
             margin-bottom: 64px;
+        }
+    }
+
+    @media(max-width: 421px) {
+        #mainHero {
+            display:flex;
+            right:0;
+            left:0;
+            transform: rotateZ(0deg);
+            margin-left: auto;
+            margin-right: auto;
+            opacity: 0.3;
         }
     }
 </style>
