stripe checkout works

--- a/myapp/templates/cart.html
+++ b/myapp/templates/cart.html
@@ -37,9 +37,10 @@
   </div>
 
   <div class="d-flex justify-content-center mt-4">
-    <a href="{% url 'shop' %}" class="btn btn-success btn-lg">
+    <a href="{% url 'create_checkout_session' %}" class="btn btn-success btn-lg">
       Proceed to Checkout
     </a>
+    
   </div>
   
   {% else %}
