discount coupons work!

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -64,6 +64,12 @@
         .member-img {
             margin-bottom: 64px;
         }
+        #mainHero {
+            max-height: 350px;
+            top: 186px;
+            right: 44px;
+            opacity: 0.3;
+        }
     }
 
     @media(max-width: 421px) {
