--- a/myapp/templates/newsletter-email-template.html
+++ b/myapp/templates/newsletter-email-template.html
@@ -3,7 +3,7 @@
     {{message}}
     {% if is_cta %}
     <br><br>
-    <a href="http://127.0.0.1:8000/shop/" style="background-color:#007bff;
+    <a href="{{ cta_link }}" style="background-color:#007bff;
     color:white;padding:10px 20px;text-decoration:none;border-radius:5px;margin-bottom:20px;">
         <b>Visit Our Website</b>
     </a>
